--- a/io7m-jpuddle-documentation/pom.xml
+++ b/io7m-jpuddle-documentation/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.io7m.jpuddle</groupId>
     <artifactId>io7m-jpuddle</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
   </parent>
   <artifactId>io7m-jpuddle-documentation</artifactId>
 
