--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
         <artifactId>io7m-junsigned-ranges</artifactId>
         <version>0.2.0</version>
       </dependency>
+      <dependency>
+        <groupId>com.io7m.jaffirm</groupId>
+        <artifactId>io7m-jaffirm-core</artifactId>
+        <version>0.1.0</version>
+      </dependency>
 
       <dependency>
         <groupId>org.slf4j</groupId>
@@ -107,11 +112,6 @@
         <groupId>it.unimi.dsi</groupId>
         <artifactId>fastutil</artifactId>
         <version>7.0.7</version>
-      </dependency>
-      <dependency>
-        <groupId>org.valid4j</groupId>
-        <artifactId>valid4j</artifactId>
-        <version>0.4.0</version>
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
