--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,16 @@
+env:
+  _JAVA_OPTIONS="-Xms1G -Xmx4G"
+
 language: java
 
 jdk:
   - oraclejdk8
+
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+
+script:
+  - mvn clean package
+
