--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
       <dependency>
         <groupId>it.unimi.dsi</groupId>
         <artifactId>fastutil</artifactId>
-        <version>7.1.0</version>
+        <version>[7.1.0, 8.0.0)</version>
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
