--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
       <dependency>
         <groupId>com.io7m.jaffirm</groupId>
         <artifactId>io7m-jaffirm-core</artifactId>
-        <version>0.1.0</version>
+        <version>[1.0.0, 2.0.0)</version>
       </dependency>
 
       <dependency>
