--- a/com.io7m.jpuddle.core/pom.xml
+++ b/com.io7m.jpuddle.core/pom.xml
@@ -7,13 +7,13 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.io7m.jpuddle</groupId>
-    <artifactId>io7m-jpuddle</artifactId>
-    <version>0.3.0</version>
+    <artifactId>com.io7m.jpuddle</artifactId>
+    <version>0.4.0</version>
   </parent>
-  <artifactId>io7m-jpuddle-core</artifactId>
+  <artifactId>com.io7m.jpuddle.core</artifactId>
 
   <packaging>bundle</packaging>
-  <name>io7m-jpuddle-core</name>
+  <name>com.io7m.jpuddle.core</name>
   <description>Sized pool types (Core)</description>
   <url>http://io7m.github.io/jpuddle/</url>
 
@@ -26,23 +26,27 @@
   <dependencies>
     <dependency>
       <groupId>com.io7m.jnull</groupId>
-      <artifactId>io7m-jnull-core</artifactId>
+      <artifactId>com.io7m.jnull.core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.io7m.junreachable</groupId>
+      <artifactId>com.io7m.junreachable.core</artifactId>
     </dependency>
     <dependency>
       <groupId>com.io7m.jfunctional</groupId>
-      <artifactId>io7m-jfunctional-core</artifactId>
+      <artifactId>com.io7m.jfunctional.core</artifactId>
     </dependency>
     <dependency>
       <groupId>com.io7m.jranges</groupId>
-      <artifactId>io7m-jranges-core</artifactId>
+      <artifactId>com.io7m.jranges.core</artifactId>
     </dependency>
     <dependency>
       <groupId>com.io7m.junsigned</groupId>
-      <artifactId>io7m-junsigned-ranges</artifactId>
+      <artifactId>com.io7m.junsigned.ranges</artifactId>
     </dependency>
     <dependency>
       <groupId>com.io7m.jaffirm</groupId>
-      <artifactId>io7m-jaffirm-core</artifactId>
+      <artifactId>com.io7m.jaffirm.core</artifactId>
     </dependency>
 
     <dependency>
@@ -85,6 +89,18 @@
               com.io7m.jpuddle.core
             </Export-Package>
           </instructions>
+        </configuration>
+      </plugin>
+
+      <!-- Ignore dependencies that bytecode analysis gets wrong. -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <configuration>
+          <failOnWarning>true</failOnWarning>
+          <ignoredUnusedDeclaredDependencies>
+            <ignoredUnusedDeclaredDependency>ch.qos.logback:logback-classic:*</ignoredUnusedDeclaredDependency>
+          </ignoredUnusedDeclaredDependencies>
         </configuration>
       </plugin>
     </plugins>
