--- a/com.io7m.jpuddle.documentation/pom.xml
+++ b/com.io7m.jpuddle.documentation/pom.xml
@@ -7,15 +7,19 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.io7m.jpuddle</groupId>
-    <artifactId>io7m-jpuddle</artifactId>
-    <version>0.3.0</version>
+    <artifactId>com.io7m.jpuddle</artifactId>
+    <version>0.4.0</version>
   </parent>
-  <artifactId>io7m-jpuddle-documentation</artifactId>
+  <artifactId>com.io7m.jpuddle.documentation</artifactId>
 
   <packaging>jar</packaging>
-  <name>io7m-jpuddle-documentation</name>
+  <name>com.io7m.jpuddle.documentation</name>
   <description>Sized pool types (Documentation)</description>
   <url>http://io7m.github.io/jpuddle/</url>
+
+  <properties>
+    <mdep.analyze.skip>true</mdep.analyze.skip>
+  </properties>
 
   <scm>
     <url>${project.parent.scm.url}</url>
@@ -26,7 +30,7 @@
   <dependencies>
     <dependency>
       <groupId>com.io7m.jnull</groupId>
-      <artifactId>io7m-jnull-core</artifactId>
+      <artifactId>com.io7m.jnull.core</artifactId>
     </dependency>
   </dependencies>
 
