--- a/com.io7m.jpuddle.documentation/pom.xml
+++ b/com.io7m.jpuddle.documentation/pom.xml
@@ -8,29 +8,24 @@
   <parent>
     <groupId>com.io7m.jpuddle</groupId>
     <artifactId>com.io7m.jpuddle</artifactId>
-    <version>0.4.0</version>
+    <version>0.5.0-SNAPSHOT</version>
   </parent>
   <artifactId>com.io7m.jpuddle.documentation</artifactId>
 
   <packaging>jar</packaging>
   <name>com.io7m.jpuddle.documentation</name>
-  <description>Sized pool types (Documentation)</description>
+  <description>Range handling (Documentation)</description>
   <url>http://io7m.github.io/jpuddle/</url>
 
   <properties>
     <mdep.analyze.skip>true</mdep.analyze.skip>
   </properties>
 
-  <scm>
-    <url>${project.parent.scm.url}</url>
-    <connection>${project.parent.scm.connection}</connection>
-    <developerConnection>${project.parent.scm.developerConnection}</developerConnection>
-  </scm>
-
   <dependencies>
     <dependency>
-      <groupId>com.io7m.jnull</groupId>
-      <artifactId>com.io7m.jnull.core</artifactId>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>com.io7m.jpuddle.core</artifactId>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
 
@@ -165,7 +160,7 @@
         </executions>
       </plugin>
 
-      <!-- Unpack the documentation archive to the parent's generated site staging directory. -->
+      <!-- Unpack the documentation archive to the parent's generated site minisite directory. -->
       <!-- This is arguably abusive, but there appears to be no other way to achieve it. -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -182,7 +177,7 @@
               <verbose>true</verbose>
               <fileset>
                 <directory>${project.build.directory}/${project.name}-${project.version}.zip/${project.name}-${project.version}/</directory>
-                <outputDirectory>${project.parent.build.directory}/staging/documentation/</outputDirectory>
+                <outputDirectory>${project.parent.build.directory}/minisite/documentation/</outputDirectory>
               </fileset>
             </configuration>
           </execution>
