--- a/pom.xml
+++ b/pom.xml
@@ -68,8 +68,8 @@
   </distributionManagement>
 
   <ciManagement>
-    <system>Travis CI</system>
-    <url>https://travis-ci.org/io7m/jpuddle</url>
+    <system>GitHub Actions</system>
+    <url>https://github.com/jpuddle/actions</url>
   </ciManagement>
 
   <prerequisites>
