--- a/com.io7m.jpuddle.core/pom.xml
+++ b/com.io7m.jpuddle.core/pom.xml
@@ -36,6 +36,10 @@
       <groupId>com.io7m.jaffirm</groupId>
       <artifactId>com.io7m.jaffirm.core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.io7m.jranges</groupId>
+      <artifactId>com.io7m.jranges.core</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.slf4j</groupId>
