--- a/com.io7m.jpuddle.documentation/pom.xml
+++ b/com.io7m.jpuddle.documentation/pom.xml
@@ -15,7 +15,7 @@
   <packaging>jar</packaging>
   <name>com.io7m.jpuddle.documentation</name>
   <description>Range handling (Documentation)</description>
-  <url>http://io7m.github.io/jpuddle/</url>
+  <url>https://www.io7m.com/software/jpuddle</url>
 
   <properties>
     <mdep.analyze.skip>true</mdep.analyze.skip>
