--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
   </developers>
 
   <issueManagement>
-    <url>http://github.com/io7m/jpuddle/issues</url>
+    <url>https://github.com/io7m/jpuddle/issues</url>
     <system>GitHub Issues</system>
   </issueManagement>
 
@@ -99,6 +99,17 @@
         <groupId>com.io7m.junreachable</groupId>
         <artifactId>com.io7m.junreachable.core</artifactId>
         <version>4.0.0</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.osgi</groupId>
+        <artifactId>org.osgi.annotation.bundle</artifactId>
+        <version>2.0.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.osgi</groupId>
+        <artifactId>org.osgi.annotation.versioning</artifactId>
+        <version>1.1.2</version>
       </dependency>
 
       <dependency>
@@ -152,6 +163,12 @@
     </pluginManagement>
 
     <plugins>
+      <!-- Spot bugs -->
+      <plugin>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
+      </plugin>
+
       <!-- Generate a site -->
       <plugin>
         <groupId>com.io7m.minisite</groupId>
