--- a/com.io7m.jpuddle.documentation/pom.xml
+++ b/com.io7m.jpuddle.documentation/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.io7m.jpuddle</groupId>
     <artifactId>com.io7m.jpuddle</artifactId>
-    <version>0.5.0-SNAPSHOT</version>
+    <version>0.5.0</version>
   </parent>
   <artifactId>com.io7m.jpuddle.documentation</artifactId>
 
