--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.io7m.jpuddle</groupId>
   <artifactId>com.io7m.jpuddle</artifactId>
-  <version>0.5.0-SNAPSHOT</version>
+  <version>0.5.0</version>
 
   <packaging>pom</packaging>
   <name>com.io7m.jpuddle</name>
