--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.io7m.jpuddle</groupId>
   <artifactId>com.io7m.jpuddle</artifactId>
-  <version>0.5.0</version>
+  <version>0.6.0-SNAPSHOT</version>
 
   <packaging>pom</packaging>
   <name>com.io7m.jpuddle</name>
@@ -27,7 +27,7 @@
   </modules>
 
   <properties>
-    <io7m.api.previousVersion>0.4.0</io7m.api.previousVersion>
+    <io7m.api.previousVersion>0.5.0</io7m.api.previousVersion>
   </properties>
 
   <licenses>
